@@ -1,5 +1,6 @@
 0.87.0
  * Added Realm.copyFromRealm() for creating detached copies of Realm objects.
+ * Added RealmObjectSchema.getFieldType()
 
 0.86.0
  * BREAKING CHANGE: The Migration API has been replaced with a new API.
